# yq-command

./: ccyq.py  pyproject.toml  quotes.yaml
