[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccyq"
version = "0.1.0"
description = "A Python implementation of the Unix yq command"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Mohamed Oueslati", email = "eng.oueslati.mohamed@gmail.com"}
]

[project.scripts]
ccyq = "ccyq:main"